--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -1,1 +1,25 @@
-"" 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Course 2 Solution</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Our Menu</h1>
+<div id="container" class="col-lg-4 col-md-6 col-sm-12">
+	<p>Morbi enim risus, sagittis ac aliquam id, hendrerit sed mauris. Duis ut neque quis risus pharetra eleifend sed congue nunc. Ut eget tellus quis libero vestibulum suscipit. Nam vitae dignissim magna. Nullam sollicitudin lacus eros, sit amet faucibus ex sodales eget. Nunc eget sagittis nisi. Nam in mattis nunc, vitae tempor metus. Phasellus luctus id ex ut tempus. Suspendisse vitae lobortis ligula. Duis hendrerit dui vel magna vehicula, vitae fringilla dolor egestas. Integer tincidunt commodo purus ac gravida.</p>
+	<div id="chicken">Chicken</div>
+	</div>
+<div id="container" class="col-lg-4 col-md-6 col-sm-12">
+	<p>Morbi enim risus, sagittis ac aliquam id, hendrerit sed mauris. Duis ut neque quis risus pharetra eleifend sed congue nunc. Ut eget tellus quis libero vestibulum suscipit. Nam vitae dignissim magna. Nullam sollicitudin lacus eros, sit amet faucibus ex sodales eget. Nunc eget sagittis nisi. Nam in mattis nunc, vitae tempor metus. Phasellus luctus id ex ut tempus. Suspendisse vitae lobortis ligula. Duis hendrerit dui vel magna vehicula, vitae fringilla dolor egestas. Integer tincidunt commodo purus ac gravida.</p>
+	<div id="beef">Beef</div>	
+	</div>
+<div id="container" class="col-lg-4 col-md-12 col-sm-12">
+	<p>Morbi enim risus, sagittis ac aliquam id, hendrerit sed mauris. Duis ut neque quis risus pharetra eleifend sed congue nunc. Ut eget tellus quis libero vestibulum suscipit. Nam vitae dignissim magna. Nullam sollicitudin lacus eros, sit amet faucibus ex sodales eget. Nunc eget sagittis nisi. Nam in mattis nunc, vitae tempor metus. Phasellus luctus id ex ut tempus. Suspendisse vitae lobortis ligula. Duis hendrerit dui vel magna vehicula, vitae fringilla dolor egestas. Integer tincidunt commodo purus ac gravida.</p>
+	<div id="sushi">Sushi</div>
+	</div>
+</body>
+</html>
